--- a/Modules/booksgrid.scss
+++ b/Modules/booksgrid.scss
@@ -1,6 +1,7 @@
 .books-grid {
   display: grid;
   grid-template-columns: 1fr 2fr auto;
+  flex-wrap: wrap;
 
   &__info {
     width: 400px;
@@ -10,7 +11,7 @@
     margin: 10px;
   }
   &__image {
-    width: 80px;
+    width: 120px;
     height: 160px;
   }
   &__author {
@@ -20,6 +21,6 @@
 
   }
   &__desc {
-
+    text-overflow: ellipsis;
   }
 }
