--- a/Modules/form.scss
+++ b/Modules/form.scss
@@ -9,17 +9,12 @@
   justify-content: space-between;
 
   &__input {
-    font-size: 30px;
-    width: 900px;
+    width: 100%;
   }
   &__input:hover {
     background-color: rgba(120, 253, 120, 0.859);
   }
 
-  &__button {
-    font-size: 30px;
-    width: 200px;
-  }
   &__button:hover {
     background-color: green;
     color: white;
@@ -29,5 +24,44 @@
     background-color: black;
     color: green;
     border-color: white;
+  }
+  @media only screen and (max-width: 400px) {
+    &__input {
+      font-size: 15px;
+    }
+    &__button {
+      font-size: 30px;
+      width: 140px;
+    }
+  }
+  
+  @media only screen and (min-width: 401px) and (max-width: 600px) {
+    &__input {
+      font-size: 20px;
+    }
+    &__button {
+      font-size: 20px;
+      width: 160px;
+    }
+  }
+  
+  @media only screen and (min-width: 601px) and (max-width: 900px) {
+    &__input {
+      font-size: 25px;
+    }
+    &__button {
+      font-size: 25px;
+      width: 180px;
+    }
+  }
+  
+  @media only screen and (min-width: 901px) {
+    &__input {
+      font-size: 30px;
+    }   
+    &__button {
+      font-size: 30px;
+      width: 200px;
+    }
   }
 }
