--- a/Modules/header.scss
+++ b/Modules/header.scss
@@ -9,4 +9,24 @@
     color: white;
     font-size: 60px;
   }
+  @media only screen and (max-width: 400px) {
+    &__text {
+      font-size: 12px;
+    }
+  }
+  @media only screen and (min-width: 401px) and (max-width: 600px) {
+    &__text {
+      font-size: 20px;
+    }  
+  }
+  @media only screen and (min-width: 601px) and (max-width: 900px) {
+    &__text {
+      font-size: 35px;
+    }
+  }
+  @media only screen and (min-width: 901px) {
+    &__text {
+      font-size: 60px;
+    }
+  }
 }
