--- a/style.css
+++ b/style.css
@@ -94,6 +94,12 @@ img {
   width: 100px;
 }
 
+.books-grid {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
 .books-grid__block {
   background-color: white;
   border: 2px solid black;
@@ -117,42 +123,16 @@ img {
 @media only screen and (min-width: 601px) and (max-width: 900px) {
   .books-grid__block {
     width: 360px;
+    font-size: 100px;
   }
 }
 @media only screen and (min-width: 901px) {
   .books-grid__block {
     width: 400px;
+    font-size: 30px;
   }
 }
 
-@media only screen and (max-width: 400px) {
-  .books-grid {
-    display: grid;
-    grid-template-columns: auto;
-    justify-content: space-between;
-  }
-}
-@media only screen and (min-width: 401px) and (max-width: 600px) {
-  .books-grid {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    justify-content: space-between;
-  }
-}
-@media only screen and (min-width: 601px) and (max-width: 900px) {
-  .books-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: space-between;
-  }
-}
-@media only screen and (min-width: 901px) {
-  .books-grid {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    justify-content: space-between;
-  }
-}
 body {
   background-color: lightblue;
 }
